# Jarvis-By-Mr-Wang

./: .editorconfig  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
config/: .env.example
data/: 2026-04-18_17-20-10.json  2026-04-18_17-20-29.json
docs/: AGENT_DESIGN.md  ARCHITECTURE.md  RAG_DESIGN.md
knowledge_base/: example.txt  新建 Text Document.txt
src/agent/: __init__.py  agent.py
src/memory/: __init__.py
src/prompts/: __init__.py
src/rag/: __init__.py  chain.py  chunker.py  config.py  embeddings.py  loader.py  vectorstore.py
src/session/: session.py
src/wechat/: __init__.py  server.py  wecom.py
tests/: test.txt  test_langchain.py  test_output.py  test_rag.py
vector_db/chroma_db/: chroma.sqlite3
workspace/: xiaoma.txt
